[gd_scene load_steps=2 format=3 uid="uid://b2j4chdw605i8"]

[ext_resource type="Script" path="res://scripts/ui/financial_statement_panel.gd" id="1_cuj6b"]

[node name="FinancialStatementPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cuj6b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BS_Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AssetRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AssetRow"]
layout_mode = 2

[node name="AssetValueLabel" type="Label" parent="MarginContainer/VBoxContainer/AssetRow"]
layout_mode = 2

[node name="LiabilityRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LiabilityRow"]
layout_mode = 2

[node name="LiabilityValueLabel" type="Label" parent="MarginContainer/VBoxContainer/LiabilityRow"]
layout_mode = 2

[node name="EquityRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EquityRow"]
layout_mode = 2

[node name="EquityValueLabel" type="Label" parent="MarginContainer/VBoxContainer/EquityRow"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer"]
layout_mode = 2

[node name="PL_Title" type="Label" parent="MarginContainer"]
layout_mode = 2

[node name="RevenueRow" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/RevenueRow"]
layout_mode = 2

[node name="RevenueValueLabel" type="Label" parent="MarginContainer/RevenueRow"]
layout_mode = 2

[node name="ExpenseRow" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ExpenseRow"]
layout_mode = 2

[node name="ExpenseValueLabel" type="Label" parent="MarginContainer/ExpenseRow"]
layout_mode = 2

[node name="ProfitRow" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ProfitRow"]
layout_mode = 2

[node name="ProfitValueLabel" type="Label" parent="MarginContainer/ProfitRow"]
layout_mode = 2
